# sdkwork-account

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/account/: account-app-api.openapi.json
apps/: README.md
apps/sdkwork-account-common/: README.md
apps/sdkwork-account-pc/: package.json  sdkwork.app.config.json  tsconfig.json
apps/sdkwork-account-pc/specs/: dependency.composition.json
apps/sdkwork-account-pc/src/: main.tsx
apps/sdkwork-account-pc/tests/test-utils/: account-service-mock.ts
crates/sdkwork-account-api-server/: Cargo.toml
crates/sdkwork-account-api-server/src/: lib.rs  main.rs
crates/sdkwork-account-database-host/: Cargo.toml
crates/sdkwork-account-database-host/src/: lib.rs
crates/sdkwork-account-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-account-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-account-repository-sqlx/: Cargo.toml
crates/sdkwork-account-repository-sqlx/src/: lib.rs  postgres_account.rs  postgres_billing.rs  postgres_hold.rs  sqlite_account.rs  sqlite_billing.rs  sqlite_hold.rs  test_sqlite_pool.rs
crates/sdkwork-account-repository-sqlx/src/store/: mod.rs  outbox.rs
crates/sdkwork-account-repository-sqlx/test_migrations/: 0001_account_repository_test.sql
crates/sdkwork-account-service/: Cargo.toml  README.md
crates/sdkwork-account-service-host/: Cargo.toml
crates/sdkwork-account-service-host/src/: lib.rs
crates/sdkwork-account-service/specs/: README.md  component.spec.json
crates/sdkwork-account-service/src/commands/: mod.rs
crates/sdkwork-account-service/src/domain/: mod.rs
crates/sdkwork-account-service/src/ports/: mod.rs
crates/sdkwork-account-service/src/queries/: mod.rs
crates/sdkwork-account-service/src/service/: mod.rs
crates/sdkwork-account-service/tests/: account_standard.rs  points_recharge_saga_contract.rs
crates/sdkwork-account-standalone-gateway/: Cargo.toml
crates/sdkwork-account-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-account-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-account-repository-sqlx/src/: lib.rs  postgres_account.rs  postgres_billing.rs  sqlite_account.rs  sqlite_billing.rs  test_sqlite_pool.rs
crates/sdkwork-commerce-account-repository-sqlx/test_migrations/: 0001_account_repository_test.sql
crates/sdkwork-commerce-account-service/: Cargo.toml  README.md
crates/sdkwork-commerce-account-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-account-service/src/commands/: mod.rs
crates/sdkwork-commerce-account-service/src/domain/: mod.rs
crates/sdkwork-commerce-account-service/src/ports/: mod.rs
crates/sdkwork-commerce-account-service/src/queries/: mod.rs
crates/sdkwork-commerce-account-service/src/service/: mod.rs
crates/sdkwork-commerce-account-service/tests/: account_standard.rs
crates/sdkwork-commerce-contract-service/: Cargo.toml  README.md  component.spec.json
crates/sdkwork-commerce-contract-service/specs/: README.md
crates/sdkwork-commerce-contract-service/tests/: commerce_core_standard.rs
crates/sdkwork-contract-service/: Cargo.toml  README.md  component.spec.json
crates/sdkwork-contract-service/specs/: README.md  component.spec.json
crates/sdkwork-contract-service/src/: lib.rs
crates/sdkwork-contract-service/tests/: commerce_core_standard.rs
crates/sdkwork-router-account-app-api/: Cargo.toml
crates/sdkwork-router-account-app-api/src/: billing_router.rs  lib.rs
crates/sdkwork-router-account-backend-api/: Cargo.toml
crates/sdkwork-router-account-backend-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-account-app-api/: Cargo.toml
crates/sdkwork-routes-account-app-api/src/: account_router.rs  billing_router.rs  lib.rs  routes.rs
crates/sdkwork-routes-account-backend-api/: Cargo.toml
crates/sdkwork-routes-account-backend-api/src/: api_response.rs  hold_router.rs  lib.rs  routes.rs  subject.rs  wallet_router.rs
database/: README.md  database.manifest.json
database/contract/: schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_account_baseline.sql
database/ddl/baseline/sqlite/: 0001_account_baseline.sql
database/migrations/sqlite/: 0001_account_tables.down.sql
database/seeds/: seed.manifest.json
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
database/seeds/locales/fr-FR/: README.md
database/seeds/locales/ja-JP/: README.md
database/seeds/locales/ko-KR/: README.md
database/seeds/locales/ru-RU/: README.md
database/seeds/locales/zh-CN/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/guides/developer/: README.md
docs/guides/integrator/: README.md
docs/product/prd/: PRD.md
scripts/: fix-postgres-placeholders.mjs  gen-postgres-hold.py  materialize-account-openapi-v3-security.mjs  sync-account-openapi-to-sdks.mjs
sdks/: README.md
sdks/sdkwork-account-app-sdk/: .sdkwork-assembly.json
sdks/sdkwork-account-app-sdk/openapi/: account-app-api.sdkgen.yaml
sdks/sdkwork-account-backend-sdk/: .sdkwork-assembly.json
sdks/sdkwork-account-backend-sdk/openapi/: account-backend-api.openapi.json  account-backend-api.sdkgen.yaml
specs/: COMMERCE_BOUNDARY_SPEC.md  README.md  commerce-integration.spec.json  component.spec.json
