[package]
name = "sdkwork-account-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "account-server"
path = "src/main.rs"

[dependencies]
sdkwork_account_gateway_assembly = { package = "sdkwork-account-gateway-assembly", path = "../sdkwork-account-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_account_app_api.workspace = true
sdkwork_routes_account_backend_api.workspace = true
sdkwork_account_service_host.workspace = true
