[package]
name = "sdkwork-account-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-account application HTTP plane."

[lib]
name = "sdkwork_account_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_account_app_api = { package = "sdkwork-routes-account-app-api", path = "../sdkwork-routes-account-app-api" }
sdkwork_routes_account_backend_api = { package = "sdkwork-routes-account-backend-api", path = "../sdkwork-routes-account-backend-api" }
