[package]
name = "sdkwork-account-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_contract_service.workspace = true
sdkwork_account_service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-database-id.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
