[package]
name = "sdkwork-commerce-account-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_account_service.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
