[package]
publish.workspace = true
name = "sdkwork-commerce-account-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce account, wallet balance, ledger, and prehold domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
